# QHOSYN

./: .gitmodules  CMakeLists.txt  README.md  build-run.sh  configure.sh  debug.sh  distclean.sh  icqt.py  imgui.ini  run.sh
PD/: Quantum Pulsars.pd
deployment/: dmg_MacOS.sh  packageDEB.sh
deployment/Linux/: QHOSYN-0.8-1-amd64.deb  QHOSYN-0.9-1-amd64.deb
deployment/Linux/QHOSYN-0.8-1-amd64/DEBIAN/: control
deployment/Linux/QHOSYN-0.8-1-amd64/usr/share/doc/QHOSYN/: copyright
deployment/Linux/QHOSYN-0.9-1-amd64/DEBIAN/: control
deployment/Linux/QHOSYN-0.9-1-amd64/usr/share/applications/: QHOSYN.desktop
deployment/MacOS/: MacOSBundleInfo.plist.in
deployment/icons/: QHOSYN-windows.rc  QHOSYN.icns  QHOSYN.xcf
src/: QHOS.cpp  QHOS.hpp  QHOSYN.cpp  QHOSYN.hpp  Wavefunction.hpp  shadercode.hpp  utility.hpp  wavefunction.hpp
src/constant-q/: cq.c  cq.h
